# qdb-esp32

./: .gitignore  Cargo.toml  README.md  sdkconfig.defaults
src/: main.rs  pipe.rs  workers.rs
src/workers/: remote.rs  wifi.rs
